<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.3</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

    <groupId>se.skltp.tak</groupId>
    <artifactId>tak-parent</artifactId>
    <packaging>pom</packaging>
    <name>tak-parent</name>
    <version>3.2.4-SNAPSHOT</version>
    <url>http://maven.apache.org</url>

    <modules>
        <module>tak-schemas</module>
        <module>tak-core</module>
		<module>tak-spring-boot-parent</module>
		<module>report</module>
		<module>tak-integration</module>
    </modules>

    <properties>
	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>17</java.version>
        <jacoco.plugin.version>0.8.12</jacoco.plugin.version>
		<ecs-logging-java.version>1.6.0</ecs-logging-java.version>
		<commons-collections4.version>4.4</commons-collections4.version>
		<cxf.version>4.0.5</cxf.version>
		<dbunit.version>2.8.0</dbunit.version>
	</properties>

	<distributionManagement>
		<repository>
			<id>release-nexus</id>
			<name>Release Nexus</name>
			<url>${releases-nexus-url}</url>
		</repository>
		<snapshotRepository>
			<id>snapshot-nexus</id>
			<name>Snapshot Nexus</name>
			<url>${snapshot-nexus-url}</url>
		</snapshotRepository>
	</distributionManagement>

	<scm>
      <url>http://github.com/skltp/tak</url>
      <connection>scm:git:https://github.com:443/skltp/tak.git</connection>
      <developerConnection>scm:git:https://github.com:443/skltp/tak.git</developerConnection>
      <tag>HEAD</tag>
    </scm>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-spring-boot-starter-jaxws</artifactId>
				<version>${cxf.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-spring-boot-starter-jaxrs</artifactId>
				<version>${cxf.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-rt-rs-extension-providers</artifactId>
				<version>${cxf.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
        	<groupId>org.mockito</groupId>
        	<artifactId>mockito-core</artifactId>
        	<scope>test</scope>
        </dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>${commons-collections4.version}</version>
		</dependency>

	</dependencies>

    <build>
    	<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>3.1.1</version>
					<configuration>
						<autoVersionSubmodules>true</autoVersionSubmodules>
						<tagNameFormat>v@{project.version}</tagNameFormat>
						<pushChanges>true</pushChanges>
						<localCheckout>true</localCheckout>
						<arguments>-Dmaven.javadoc.skip=true</arguments>
						<checkModificationExcludes>
							<checkModificationExclude>tak-web/application.properties</checkModificationExclude>
						</checkModificationExcludes>
					</configuration>
				</plugin>
				<plugin>
					<groupId>com.mycila</groupId>
					<artifactId>license-maven-plugin</artifactId>
					<version>3.0</version>
					<configuration>
						<properties>
							<year>2013</year>
							<copyright>Center for eHalsa i samverkan (CeHis).
							&lt;http://cehis.se/&gt;</copyright>
							<product>SKLTP</product>
						</properties>
						<strictCheck>true</strictCheck>
						<basedir>${basedir}</basedir>
						<header>https://raw.githubusercontent.com/skltp/license/develop/header.txt</header>
						<encoding>UTF-8</encoding>
						<includes>
							<include>src/main/**</include>
							<include>src/test/**</include>
						</includes>
						<excludes>
							<exclude>**/*.xsd</exclude>
							<exclude>**/*.wsdl</exclude>
				            <exclude>**/*.xml</exclude>
							<exclude>**/*.dtd</exclude>
						</excludes>
						<useDefaultExcludes>true</useDefaultExcludes>
						<mapping>
							<tag>DYNASCRIPT_STYLE</tag>
						</mapping>
						<useDefaultMapping>true</useDefaultMapping>
					</configuration>
				</plugin>

			</plugins>
		</pluginManagement>

        <plugins>
      		<plugin>
    			<groupId>com.mycila.maven-license-plugin</groupId>
    				<artifactId>maven-license-plugin</artifactId>
					<version>1.10.b1</version>
    		</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.8.0</version>
			</plugin>
        </plugins>
    </build>

    <profiles>
		<profile>
			<id>license</id>
			<activation>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>com.mycila.maven-license-plugin</groupId>
						<artifactId>maven-license-plugin</artifactId>
						<executions>
							<execution>
								<id>check</id>
								<phase>compile</phase>
								<goals>
									<goal>check</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>test-coverage</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>${jacoco.plugin.version}</version>
						<executions>
							<execution>
								<id>default-prepare-agent</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>
							<execution>
								<id>default-report</id>
								<goals>
									<goal>report</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
